<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="none"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Search_Detail">

    <TextView
        android:id="@+id/article_title"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/title_text"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:layout_height="wrap_content"/>
    <ProgressBar
        android:id="@+id/imageProgressBar"
        android:layout_gravity="center"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
    <ImageView
        android:id="@+id/article_Image"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:srcCompat="@tools:sample/avatars[1]"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginStart="10sp"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/source_text"/>
        <TextView
            android:id="@+id/article_source"
            android:layout_width="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_height="wrap_content"
            android:text="@string/source_text" />

        <TextView
            android:text="@string/author_text"
            android:layout_width="wrap_content"
            android:layout_marginStart="10sp"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/article_author"
            android:textColor="@android:color/black"
            android:text="@string/author_text"
            android:layout_width="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/published_text"
            android:layout_width="wrap_content"
            android:layout_marginStart="10sp"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/article_publish_date"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/published_text" />

        <TextView
            android:text="@string/url_text"
            android:layout_width="wrap_content"
            android:layout_marginStart="10sp"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/source_url"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="20sp"
            android:layout_height="wrap_content"
            android:text="@string/url_text"
            android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_height="wrap_content"
        android:text="@string/description_text"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:id="@+id/article_description"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/article_text"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"

        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:text="@string/contents_text"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/article_body"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/article_text"
        android:textSize="20sp"/>

</LinearLayout>
</ScrollView>